# vision

./: .gitignore  README.md
roborts_bringup/: package.xml
roborts_bringup/launch/: debug_camera.launch  debug_serial.launch  robot1.launch  robot1_only_big.launch  robot1_only_small.launch  robot6.launch
roborts_bringup/scripts/upstart/: create_upstart_service.sh  delete_upstart_service.sh
roborts_msgs/: CMakeLists.txt  package.xml
roborts_msgs/msg/: Chassis.msg  Gimbal.msg
roborts_serial/: CMakeLists.txt  README.md  package.xml  ros_dep.h
roborts_serial/serial/: main.cpp  protocol.h  serial_node.cpp  serial_node.h
roborts_serial/test/: fake_loop.cpp  fake_serial.cpp
roborts_vision/: CMakeLists.txt  package.xml
roborts_vision/include/: VisionNode.h  dep.h
roborts_vision/module/camera/mercure/: mercure.xml  mercure_driver.cpp  mercure_driver.h  mercure_pnp.xml
roborts_vision/module/camera/uvc/: RMVideoCapture.cpp  RMVideoCapture.hpp
roborts_vision/module/classification/svm/: CMakeLists.txt
roborts_vision/module/classification/svm/tools/: constraint_set.cpp  constraint_set.h  main.cpp
roborts_vision/module/classification/svm/train/: main.cpp  train.cpp  trian_svm.cpp
roborts_vision/module/detect_factory/: CMakeLists.txt  offset.xml  pnp_solver.h
roborts_vision/module/detect_factory/armor/CC/: constraint_set.cpp  constraint_set.h  constraint_set.xml  cv_toolbox.h
roborts_vision/module/detect_factory/armor/HYY/: constraint_set.cpp  constraint_set.h  constraint_set.xml  cv_toolbox.h  detection_node.h  utils.cpp  utils.h
roborts_vision/module/detect_factory/armor/LCP/: constraint_set.cpp  constraint_set.h  cv_toolbox.h
roborts_vision/module/detect_factory/armor/LCP/config/: mercure_param.xml  realsense_param.xml
roborts_vision/module/detect_factory/armor/RM2017/: constraint_set.cpp  constraint_set.h  cv_toolbox.h
roborts_vision/module/detect_factory/rune/: Rune_fiall.cpp  Rune_fiall.h  rune.xml
roborts_vision/module/executor/gimbal/: gimbal.xml  gimbal_control.cpp  gimbal_control.h
roborts_vision/module/filter/: CMakeLists.txt  Filter.cpp  Filter.hpp
roborts_vision/node/: Image.cpp  Serial.cpp  VisionNode.cpp  decision.cpp
